# mc-manage

./: README.md  airtable-deployment-update.py  pyproject.toml
.github/workflows/: release_record.yml
mc-manage/: airtable-release-update.py
