[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mc-manage"
version="v1.1.2"
dependencies = [
  "pyairtable == 2.3.*"
]
requires-python = ">=3.10"
authors = [
  {name = "Paige Gulley", email = "pgulley@mediacloud.org"}
]

description = "Frequently re-used management scripts for the mediacloud stack."
readme = "README.md"


[tool.flit.module]
name = "mc-manage"